--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -2,10 +2,10 @@ name: test the runner
 
 on: 
   push:
-    branches: [main]
-  workflow_dispatch
+      branches: [main]
+  workflow_dispatch:
   
- jobs:
+jobs:
   build:
     runs-on: ubuntu-latest
     steps:
